[tool.poetry]
name = "gh-actions-try-out"
version = "0.1.0"
description = ""
authors = ["Nicholas Wu <misternicholaswu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
